recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:34: error: not found: value k
	motif(length,levels,k)
                            ^